RESOLVED FIXED278573
[Writing Tools] Stylized text disappears when clicking on show original
https://bugs.webkit.org/show_bug.cgi?id=278573
Summary [Writing Tools] Stylized text disappears when clicking on show original
Richard Robinson
Reported 2024-08-23 13:10:13 PDT
Attachments
Richard Robinson
Comment 1 2024-08-23 13:11:29 PDT
EWS
Comment 2 2024-08-26 10:54:57 PDT
Committed 282750@main (f4b28e23dc40): <https://commits.webkit.org/282750@main> Reviewed commits have been landed. Closing PR #32640 and removing active labels.
EWS
Comment 3 2024-09-05 11:10:38 PDT
Committed 280938.305@safari-7619-branch (a2e9a52e04f5): <https://commits.webkit.org/280938.305@safari-7619-branch> Reviewed commits have been landed. Closing PR #1695 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.