[Writing Tools] Stylized text disappears when clicking on show original https://bugs.webkit.org/show_bug.cgi?id=278573 rdar://133809455

Reviewed by Abrar Rahman Protyasha.

Persist the transparent document markers after a replacement occurs to ensure that they do not
erroneously get re-added after undo-ing as a result of "Show Original".

* Source/WebCore/page/writing-tools/WritingToolsController.h:
* Source/WebCore/page/writing-tools/WritingToolsController.mm:
(WebCore::WritingToolsController::showSelection const):
(WebCore::WritingToolsController::compositionSessionDidReceiveTextWithReplacementRangeAsync):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::hasTransparentContentMarker):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WritingTools.mm:
(TEST(WritingTools, CompositionShowOriginalHasNoTransparentMarkers)):

Canonical link: https://commits.webkit.org/282750@main